# sales_forecast

./: pyproject.toml  requirements.txt  stores_sales_predict.ipynb
data/: store.csv  test.csv
notebooks/: sales_forecast.ipynb  stores_sales_predict.ipynb
