[tool.poetry]
name = "sales_forecast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "3.4.4"
pandas = "^1.4.3"
inflection = "^0.5.1"
jupyterlab-vim = "^0.15.1"
seaborn = "^0.11.2"
ipython = "^8.4.0"
jupyter-contrib-nbextensions = "^0.5.1"
tabulate = "^0.8.10"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
